practice tasks solutions

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,10 +7,11 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 # Настройки H2 (in-memory)
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+# Закоментил для проверки бина DataSource
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
 
 # Настройки JPA / Hibernate
 spring.jpa.show-sql=true
